# HW5_AirLLM

./: .env-example  .gitignore  README.md  pyproject.toml
config/: README.md
docs/: PLAN.md  PRD.md  PRD_airllm_layer_streaming.md  TODO.md
notebooks/: colab_gpu.ipynb
results/: analysis.md  comparison.csv  comparison_table.md  host_spec.json  run_airllm_20260615150722.json  run_gpu_20260617143218.json  run_gpu_20260617T143218.json  run_ollama_20260615140532.json  run_transformers_cpu_20260615141847.json
src/airllm_bench/: __init__.py  cli.py  constants.py
src/airllm_bench/sdk/: __init__.py  _executor.py  analytics.py  analytics_data.py  analytics_plot.py  analytics_table.py  runner.py
src/airllm_bench/services/: __init__.py  host_spec.py  model_provider.py
src/airllm_bench/services/backends/: __init__.py  airllm_backend.py  base.py  gpu_importer.py  ollama_backend.py  transformers_cpu_backend.py
src/airllm_bench/services/metrics/: __init__.py  memory_monitor.py  recorder.py  run_result.py  timer.py
src/airllm_bench/shared/: __init__.py  config.py  gatekeeper.py  version.py
tests/integration/: __init__.py  test_smoke.py
tests/unit/: test_airllm_backend.py  test_analytics.py  test_backend_base.py  test_cli.py  test_config.py  test_executor.py  test_gatekeeper.py  test_gpu_importer.py  test_host_spec.py  test_memory_monitor.py  test_model_provider.py  test_ollama_backend.py  test_recorder.py  test_run_result.py  test_runner.py  test_timer.py  test_transformers_backend.py  test_version_constants.py
