[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airllm-bench"
version = "0.1.0"
description = "Benchmark harness proving AirLLM enables large-model inference on memory-constrained hardware."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Student", email = "student@example.com" }]
keywords = ["llm", "benchmark", "airllm", "memory", "inference"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "airllm>=0.8.0",
    "huggingface-hub>=0.23.0",
    "safetensors>=0.4.3",
    "accelerate>=0.30.0",
    "psutil>=5.9.8",
    "tenacity>=8.3.0",
    "pydantic-settings>=2.2.1",
    "typer>=0.12.3",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "requests>=2.34.2",
]

[project.scripts]
airllm-bench = "airllm_bench.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airllm_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not integration'"
markers = [
    "integration: marks tests as integration tests (require real models/network) -- skip by default",
]

[tool.coverage.run]
source = ["airllm_bench"]
omit = [
    "*/cli.py",
    "*/notebooks/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 85

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
